@@ -32,8 +32,6 @@ import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -44,7 +42,7 @@ public class CreateMessageCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("ComponentVendorName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("EntityTypeName", FieldType.ENTITY_TYPE_NAME, true, null, null),
             new FieldDefinition("MessageTypeName", FieldType.ENTITY_NAME, true, null, null),
@@ -56,7 +54,7 @@ public class CreateMessageCommand
             new FieldDefinition("StringMessage", FieldType.STRING, false, 1L, 512L),
             // BlobMessage is not validated
             new FieldDefinition("Description", FieldType.STRING, false, 1L, 132L)
-        ));
+        );
     }
     
     /** Creates a new instance of CreateMessageCommand */
