@@ -32,8 +32,6 @@ import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -44,12 +42,12 @@ public class CreateRatingCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("RatedByUsername", FieldType.STRING, false, 1L, 80L),
             new FieldDefinition("EntityRef", FieldType.ENTITY_REF, true, null, null),
             new FieldDefinition("RatingTypeName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("RatingTypeListItemName", FieldType.ENTITY_NAME, true, null, null)
-        ));
+        );
     }
     
     /** Creates a new instance of CreateRatingCommand */
