@@ -36,8 +36,6 @@ import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
 import com.google.common.base.Splitter;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -56,7 +54,7 @@ public class SearchEntityTypesCommand
                 ))
         ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("LanguageIsoName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("SearchDefaultOperatorName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("SearchSortDirectionName", FieldType.ENTITY_NAME, false, null, null),
@@ -68,7 +66,7 @@ public class SearchEntityTypesCommand
                 new FieldDefinition("Fields", FieldType.STRING, false, null, null),
                 new FieldDefinition("RememberPreferences", FieldType.BOOLEAN, false, null, null),
                 new FieldDefinition("SearchUseTypeName", FieldType.ENTITY_NAME, false, null, null)
-                ));
+                );
     }
 
     /** Creates a new instance of SearchEntityTypesCommand */
