@@ -27,8 +27,6 @@ import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -39,12 +37,12 @@ public class DeleteSubscriptionTypeChainCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("SubscriptionKindName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("SubscriptionTypeName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("ChainTypeName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("ChainName", FieldType.ENTITY_NAME, true, null, null)
-        ));
+        );
     }
     
     /** Creates a new instance of DeleteSubscriptionTypeChainCommand */
