@@ -33,8 +33,6 @@ import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -45,7 +43,7 @@ public class CreateWorkEffortScopeCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("WorkEffortTypeName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("WorkEffortScopeName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("WorkEffortSequenceName", FieldType.ENTITY_NAME, false, null, null),
@@ -58,7 +56,7 @@ public class CreateWorkEffortScopeCommand
             new FieldDefinition("IsDefault", FieldType.BOOLEAN, true, null, null),
             new FieldDefinition("SortOrder", FieldType.SIGNED_INTEGER, true, null, null),
             new FieldDefinition("Description", FieldType.STRING, false, 1L, 132L)
-        ));
+        );
     }
     
     /** Creates a new instance of CreateWorkEffortScopeCommand */
